--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.9.0",
     "next": "^15.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
