--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -34,6 +34,7 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^6.6.0",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.4.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
