--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,11 +8,12 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "seed": "ts-node ./prisma/seed.ts",
-    "run-seed": "ts-node ./scripts/run-seed.ts",
+    "db:generate": "pnpm dlx prisma generate",
+    "db:push": "pnpm dlx prisma db push",
+    "db:seed": "ts-node ./prisma/seed.ts",
     "start": "nest start",
-    "start:dev": "pnpm run-seed && nest start --watch",
-    "start:debug": "pnpm run-seed && nest start --debug --watch",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
