--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.74.4",
+    "@repo/common": "workspace:*",
     "axios": "^1.9.0",
     "next": "^15.3.0",
     "react": "^19.1.0",
