--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,9 +11,10 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
-    "@tanstack/react-query": "^5.74.4",
     "@repo/common": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@tanstack/react-query": "^5.74.4",
     "axios": "^1.9.0",
     "next": "^15.3.0",
     "react": "^19.1.0",
@@ -27,7 +28,10 @@
     "@types/node": "^22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "5.8.2"
   }
 }
