--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/react-query": "^5.74.9",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
