--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,12 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@repo/common": "workspace:*",
+    "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/react-query": "^5.74.9",
