feat: update poetry list to poem collection

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "db:generate": "npx prisma generate",
     "db:push": "npx prisma db push",
-    "db:seed": "ts-node ./prisma/seed.ts",
+    "db:push:reset": "npx prisma db push --force-reset",
+    "db:init": "ts-node ./scripts/db-init/index.ts",
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
