--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,37 @@
 version: '3.8'
 services:
-  db:
-    image: postgres:14
+  postgres:
+    image: ankane/pgvector:latest
+    container_name: pg
     restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: ifs
+      POSTGRES_DB: poetry
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
-  server:
-    build:
-      context: ./apps/server
-    ports:
-      - "4000:4000"
-    depends_on:
-      - db
-    environment:
-      DATABASE_URL: postgres://postgres:postgres@db:5432/ifs
-    volumes:
-      - ./apps/server:/app
+#   server:
+#     build:
+#       context: ./apps/server
+#     ports:
+#       - "4000:4000"
+#     depends_on:
+#       - db
+#     environment:
+#       DATABASE_URL: postgres://postgres:postgres@db:5432/ifs
+#     volumes:
+#       - ./apps/server:/app
 
-  web:
-    build:
-      context: ./apps/web
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./apps/web:/app
+#   web:
+#     build:
+#       context: ./apps/web
+#     ports:
+#       - "3000:3000"
+#     volumes:
+#       - ./apps/web:/app
 
-volumes:
-  pgdata:
+# volumes:
+#   pgdata:
