--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   postgres:
     image: ankane/pgvector:latest
-    container_name: pg
+    container_name: poetry-db
     restart: always
     environment:
       POSTGRES_USER: postgres
@@ -11,27 +11,16 @@ services:
     volumes:
       - ./data:/var/lib/postgresql/data
     ports:
-      - "5433:5432"
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
-#   server:
-#     build:
-#       context: ./apps/server
-#     ports:
-#       - "4000:4000"
-#     depends_on:
-#       - db
-#     environment:
-#       DATABASE_URL: postgres://postgres:postgres@db:5432/ifs
-#     volumes:
-#       - ./apps/server:/app
+volumes:
+  data:
 
-#   web:
-#     build:
-#       context: ./apps/web
-#     ports:
-#       - "3000:3000"
-#     volumes:
-#       - ./apps/web:/app
-
-# volumes:
-#   pgdata:
+networks:
+  default:
+    name: poetry-network
