feat: update docker compose

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,49 +1,26 @@
-# 开发阶段
-FROM node:20-alpine AS development
-WORKDIR /app
-
-# 安装 pnpm
-RUN corepack enable && corepack prepare pnpm@latest --activate
-
-# 复制 package.json 和 pnpm-lock.yaml
-COPY pnpm-lock.yaml package.json pnpm-workspace.yaml ./
-COPY .npmrc ./
-COPY apps/server/package.json ./apps/server/package.json
-COPY packages/ ./packages/
-
-# 安装依赖
-RUN pnpm install --frozen-lockfile
-
-# 复制源代码
-COPY . .
-
-# 设置工作目录
-WORKDIR /app/apps/server
-
-# 开发模式命令
-CMD ["pnpm", "run", "start:dev"]
-
-# 生产阶段
 FROM node:20-alpine AS production
 WORKDIR /app
 
 # 安装 pnpm
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
-# 复制 package.json 和 pnpm-lock.yaml
-COPY pnpm-lock.yaml package.json pnpm-workspace.yaml ./
-COPY .npmrc ./
-COPY apps/server/package.json ./apps/server/package.json
-COPY packages/ ./packages/
+# 复制所有文件
+COPY . .
 
-# 安装生产依赖
-RUN pnpm install --prod --frozen-lockfile
+# 安装依赖并构建
+RUN pnpm install --frozen-lockfile
+RUN pnpm -r --filter \"./packages/*\" build
 
-# 复制构建产物
-COPY --from=development /app/apps/server/dist ./dist
+# 只生成 Prisma 客户端，不执行迁移
+RUN cd apps/server && pnpm run db:generate
+RUN cd apps/server && pnpm run build
 
-# 设置工作目录
-WORKDIR /app/apps/server
+# 安装 pg_isready 工具
+RUN apk add --no-cache postgresql-client
+
+# 复制启动脚本并设置执行权限
+COPY apps/server/start.sh /app/start.sh
+RUN chmod +x /app/start.sh
 
 # 生产模式命令
-CMD ["node", "dist/main.js"]
+CMD ["/app/start.sh"]
