--- a/.dockerignore
+++ b/.dockerignore
@@ -11,9 +11,9 @@
 **/*.so
 **/.DS_Store
 **/coverage
-**/.env
-**/.env.local
-**/.env.*.local
+# **/.env
+# **/.env.local
+# **/.env.*.local
 **/npm-debug.log*
 **/yarn-debug.log*
 **/yarn-error.log*
@@ -24,7 +24,7 @@
 **/.yarn
 **/.turbo
 **/.vercel
-**/.next
+# **/.next
 **/out
 **/tmp
 **/temp
