--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,9 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
+    "clean": {
+      "dependsOn": ["^clean"]
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
